--- a/app/src/main/res/layout/offer_list_item.xml
+++ b/app/src/main/res/layout/offer_list_item.xml
@@ -1,76 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/oceanBlue"
+    android:layout_width="wrap_content"
+    android:layout_height="100dp"
+    android:background="@color/lightBlue"
+    android:id="@+id/item_layout"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-        <ImageView
-            android:layout_height="70dp"
-            android:layout_width="70dp"
-            android:id="@+id/category_image"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:scaleType="centerInside"
-            android:background="@drawable/oval_background_white"
-            android:src="@drawable/ic_home">
-        </ImageView>
+    <ImageView
+        android:id="@+id/category_image"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="8dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/oval_background_white"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_home"/>
 
     <TextView
         android:id="@+id/offer_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="4dp"
         android:layout_toEndOf="@id/category_image"
+        android:layout_toStartOf="@id/time_currency_value_list"
         android:text="Oferta"
         android:textColor="#FFF"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/service_owner_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:textColor="#FFF"
+        android:alpha="0.80"
+        android:layout_below="@id/offer_title"
         android:layout_toEndOf="@id/category_image"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="4dp"
-        android:text="Wystawiono: 13-11-2018"
+        android:layout_marginEnd="4dp"
+        android:layout_toStartOf="@id/time_currency_value_list"
+        android:text="Właściciel"
         />
-
-    <ImageView
-        android:id="@+id/star_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="4dp"
-        android:src="@drawable/ic_star_empty" />
 
     <TextView
         android:id="@+id/time_currency_value_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:paddingTop="2dp"
         android:layout_margin="2dp"
-        android:textColor="#FFF"
-        android:textSize="18sp"
         android:layout_toStartOf="@id/time_currency_img"
-        android:layout_alignParentBottom="true"
         android:text="0"
-        />
+        android:textColor="#FFF"
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/time_currency_img"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="4dp"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_timecurrency" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#FFF"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:background="#FFF" />
 
 
 </RelativeLayout>
