--- a/app/src/main/res/menu/timebank_menu.xml
+++ b/app/src/main/res/menu/timebank_menu.xml
@@ -7,6 +7,8 @@
         android:icon="@drawable/ic_add_person"
         app:showAsAction="always" />
 
-
+    <item android:id="@+id/exit_timebank"
+        android:title="@string/exit_timebank"
+        app:showAsAction="never" />
 
 </menu>
