--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/lightBlue">
 
     <RelativeLayout
         android:id="@+id/service_top_bar"
@@ -50,7 +51,7 @@
             android:id="@+id/service_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/oceanBlue" />
+            android:textColor="#FFF" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -62,7 +63,7 @@
             android:id="@+id/category_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/oceanBlue" />
+            android:textColor="#FFF" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -74,7 +75,7 @@
             android:id="@+id/service_owner_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/oceanBlue" />
+            android:textColor="#FFF" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -86,7 +87,7 @@
             android:id="@+id/creation_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/oceanBlue" />
+            android:textColor="#FFF" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -97,8 +98,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:background="@color/oceanBlue">
+            android:layout_marginTop="2dp">
 
             <TextView
                 android:id="@+id/time_currency_value"
@@ -139,7 +139,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#FFF" />
+            android:background="@color/lightBlue" />
         <Button
             android:id="@+id/get_service_button"
             android:layout_width="0dp"
