--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -57,6 +57,7 @@
         app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_marginStart="2dp"
@@ -64,5 +65,16 @@
         android:src="@drawable/ic_timecurrency"
         app:layout_constraintStart_toEndOf="@+id/time_currency_value"
         app:layout_constraintTop_toBottomOf="@+id/user_name" />
+
+    <ImageView
+        android:id="@+id/send_message"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="6dp"
+        android:src="@drawable/ic_email_white"
+        android:scaleType="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
