--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/nav_messages"
             android:icon="@drawable/ic_messages"
-            android:title="@string/messages" />
+            android:title="@string/group_chat" />
 
         <item
             android:id="@+id/nav_todo"
