--- a/app/src/main/res/layout/dialog_timebank_code.xml
+++ b/app/src/main/res/layout/dialog_timebank_code.xml
@@ -14,7 +14,7 @@
         android:paddingStart="16dp"
         android:paddingTop="20dp"
         android:scaleType="center"
-        android:text="@string/about_app"
+        android:text="@string/timbank_code"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:textStyle="bold" />
