--- a/app/src/main/res/layout/fragment_myservices.xml
+++ b/app/src/main/res/layout/fragment_myservices.xml
@@ -13,4 +13,17 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:drawablePadding="12dp"
+        android:text="@string/empty_screen_myservices"
+        android:drawableTop="@drawable/ic_blank"
+        android:visibility="invisible"
+        />
+
 </RelativeLayout>
